--- a/src/components/Header/Modals/Localization/Localization.css
+++ b/src/components/Header/Modals/Localization/Localization.css
@@ -63,3 +63,10 @@
     width: 10%;
     cursor: pointer;
 }
+
+@media (min-width: 320px) and (max-width: 479px) {
+    .localization{
+        width: 100%;
+        overflow-y: scroll;
+    }
+}
