--- a/src/components/Header/Modals/Search/Search.css
+++ b/src/components/Header/Modals/Search/Search.css
@@ -62,3 +62,10 @@
     border-color: #E6E6E6;
 }
 
+@media screen and (max-width: 479px) {
+    .search{
+        width: 100%;
+        overflow-y: scroll;
+    }
+}
+
